<resources>
    <string name="app_name">TBCWorks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_details">Event Details</string>
    <string name="register_now">Register Now</string>
    <string name="about_this_event">About This Event</string>
    <string name="agenda">Agenda</string>
    <string name="featured_speakers">Featured Speakers</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_details_to_get_started">Enter your details to get started.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_require">Password must be at least 8 characters with uppercase, lowercase, and number.</string>
    <string name="first_name">First Name</string>
    <string name="john">John</string>
    <string name="last_name">Last Name</string>
    <string name="doe">Doe</string>
    <string name="email">Email</string>
    <string name="john_doe_company_com">john.doe@company.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="_995_551_23_45_67">+995 551 23 45 67</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="code_expires_in">Code expires in  </string>
    <string name="resend_code">Resend Code</string>
    <string name="department">Department</string>
    <string name="select_department">Select Department</string>
    <string name="password">Password</string>
    <string name="create_passord">Create Passord</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of Service and Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_credentials_to_access_your_account">Enter your credentials to access your account</string>
    <string name="browse_events">Browse Events</string>
    <string name="filters">Filters</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="trending_events">Trending Events</string>
    <string name="browse_by_category">Browse by Category</string>
    <string name="view_all">View all</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="eventhub">EventHub</string>
    <string name="search_events">Search events...</string>
    <string name="team_building">Team Building</string>
    <string name="welcome_subtitle">Stay connected with upcoming company events and activities.</string>
</resources>