<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.screen.register.SignUpFragment"
    android:padding="30dp"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/tvSubtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/enter_your_details_to_get_started"
                android:textColor="@color/gray_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignUp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFirstName"
                style="@style/TextViewLabel"
                android:layout_marginTop="40dp"
                android:text="@string/first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFirstName"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:hint="@string/john"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFirstName"
                app:layout_constraintWidth_percent="0.47"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewLabel"
                android:text="@string/last_name"
                android:layout_marginTop="0dp"
                app:layout_constraintStart_toStartOf="@id/etLastName"
                app:layout_constraintTop_toTopOf="@id/tvFirstName"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLastName"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:hint="@string/doe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFirstName"
                app:layout_constraintWidth_percent="0.47"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                style="@style/TextViewLabel"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etFirstName"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                style="@style/EditTextStyle"
                android:hint="@string/john_doe_company_com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhoneNumber"
                style="@style/TextViewLabel"
                android:text="@string/phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhoneNumber"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:hint="@string/_995_551_23_45_67"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber"
                app:layout_constraintWidth_percent="0.7"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSentOTP"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="10dp"
                android:text="@string/send_otp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:backgroundTint="@color/button_gray"
                app:layout_constraintStart_toEndOf="@id/etPhoneNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/etPhoneNumber"/>

            <!-- shield icon daamate -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icShield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shield"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvEnterOtp"
                app:layout_constraintBottom_toBottomOf="@id/tvEnterOtp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEnterOtp"
                style="@style/TextViewLabel"
                android:layout_marginStart="10dp"
                android:text="@string/enter_otp_code"
                app:layout_constraintStart_toEndOf="@id/icShield"
                app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOtpCode"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEnterOtp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCodeExpires"
                style="@style/TextViewLabel"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray_text"
                android:text="@string/code_expires_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvOtpCode"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvExpireTime"
                style="@style/TextViewLabel"
                android:layout_marginTop="5dp"
                android:text="00 : 50"
                android:layout_marginEnd="3dp"
                android:textColor="@color/gray_text"
                app:layout_constraintStart_toEndOf="@id/tvCodeExpires"
                app:layout_constraintTop_toBottomOf="@id/rvOtpCode"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBtnResendCode"
                style="@style/TextViewLabel"
                android:layout_marginTop="0dp"
                android:layout_marginStart="10dp"
                android:text="@string/resend_code"
                android:focusable="true"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvCodeExpires"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDepartment"
                style="@style/TextViewLabel"
                android:text="@string/department"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCodeExpires"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiDepartment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/black"
                android:hint="@string/select_department"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDepartment">

                <AutoCompleteTextView
                    android:id="@+id/departmentDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                style="@style/TextViewLabel"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiDepartment"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                style="@style/EditTextStyle"
                android:hint="@string/create_passord"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPassword"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icRequiredPassword"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@drawable/ic_quetion"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/gray_text"
                app:layout_constraintTop_toTopOf="@id/tvPassword"
                app:layout_constraintBottom_toBottomOf="@id/tvPassword"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPasswordSubtitle"
                style="@style/TextViewLabel"
                android:layout_marginTop="5dp"
                android:text="@string/password_require"
                android:textColor="@color/gray_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassword"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirmPassword"
                style="@style/TextViewLabel"
                android:text="@string/confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPasswordSubtitle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etConfirmPassword"
                style="@style/EditTextStyle"
                android:hint="@string/confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icRequiredConfirmPass"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@drawable/ic_quetion"
                android:backgroundTint="@color/gray_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvConfirmPassword"
                app:layout_constraintBottom_toBottomOf="@id/tvConfirmPassword"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkboxPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/i_agree_to_the_terms_of_service_and_privacy_policy"
                android:textColor="@color/black"
                app:buttonTint="@color/gray_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/shape_btn"
                android:backgroundTint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkboxPolicy"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHaveAccount"
                style="@style/TextViewLabel"
                android:text="@string/already_have_an_account"
                app:layout_constraintTop_toBottomOf="@id/btnCreateAccount"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/gray_text"
                app:layout_constraintEnd_toStartOf="@id/tvBtnSignIn"
                app:layout_constraintHorizontal_chainStyle="packed"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBtnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:focusable="true"
                android:clickable="true"
                app:layout_constraintTop_toTopOf="@id/tvHaveAccount"
                app:layout_constraintBottom_toBottomOf="@id/tvHaveAccount"
                app:layout_constraintStart_toEndOf="@id/tvHaveAccount"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                android:indeterminate="true"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>